samples/_failures_safe/1761078424_9316f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cf3cab6.c: In function ‘main’:
./samples/SAFE/__tmp_8cf3cab6.c:158:5: error: expected declaration or statement at end of input
  158 |     return 0;
      |     ^~~~~~
